# ShaderLabDX12

./: .gitignore  .tmp_crinkler_check.bat  BOOTSTRAP_COMPLETE.md  CMakeLists.txt  CheatSheet.md  IMPLEMENTATION_SUMMARY.md  LICENSE-COMMERCIAL.md  LICENSE-COMMUNITY.md  README-CRINKLER.txt  README.md  RELEASE_NOTES_v2.0.0.md  SETUP_STATUS.md  UI_DESIGN_SPEC.md  UI_TESTING.md  imgui.ini  test_compile.cpp
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release.yml  validate.yml
cmake/: AppMetadata.h.in  WinVersionInfo.rc.in
creative/: LICENSE.md
creative/examples/: README.md
creative/shaders/: example_gradient.hlsl  example_tunnel.hlsl
docs/: ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  RELEASE_SHIP_CHECKLIST_v2.0.0.md  STRUCTURE.md  UI_REFACTOR_PLAN.md  feature_time_offset.md
docs/archive/: LEGACY_NOTES_2026-02.md
docs/enduser/: INSTALL_AND_RUN.md  KEYBOARD_SHORTCUTS.md  README.md  TROUBLESHOOTING.md
editor_assets/about/: about_logo.hlsl
editor_assets/fonts/: README.md
editor_assets/presets/compute/: denoise_basic.hlsl  temporal_glow.hlsl
editor_assets/presets/postfx/: about_glitch.hlsl  chromatic_aberration.hlsl  grain.hlsl  scanlines.hlsl  simple_blur.hlsl  vignette.hlsl
editor_assets/presets/scenes/: dodecahedron_wireframe.hlsl  hello_world.hlsl  tetrahedron_tutorial.hlsl
editor_assets/presets/transitions/: crossfade.hlsl  dip_to_black.hlsl  fade_in.hlsl  fade_out.hlsl  glitch.hlsl  pixelate.hlsl
editor_assets/shaders/: TEMPORAL_ACCUMULATION_EXPLAINED.hlsl  TEMPORAL_PERFORMANCE.txt  temporal_accumulation.hlsl  temporal_glow_example.hlsl
editor_assets/themes/: galaxy_tile.ppm  noizr_tile.ppm
include/ShaderLab/: Constants.h
include/ShaderLab/App/: DemoPlayer.h  EditorApp.h  PlayerApp.h  ShaderLabApp.h
include/ShaderLab/Audio/: AudioSystem.h  BeatClock.h
include/ShaderLab/Core/: BuildPipeline.h  CompilationService.h  DxcCompilationService.h  PackageManager.h  PlaybackService.h  Serializer.h  ShaderLabData.h
include/ShaderLab/DevKit/: BuildPipeline.h  RuntimeExporter.h
include/ShaderLab/Graphics/: CommandQueue.h  ComputeEffectManager.h  Device.h  Dx12ResourceService.h  EffectChainProcessor.h  GraphicsDeviceService.h  POSTFX_VS_COMPUTE_GUIDE.h  PreviewRenderer.h  RenderContext.h  ResourceService.h  Swapchain.h  TemporalAccumulator.h  UNIFIED_EFFECT_ARCHITECTURE.h
include/ShaderLab/Graphics/Vulkan/: VulkanCommandQueue.h  VulkanDevice.h  VulkanRenderer.h  VulkanSwapchain.h
include/ShaderLab/Platform/: Platform.h
include/ShaderLab/Runtime/: RuntimeStartupPolicy.h  RuntimeWindowPolicy.h
include/ShaderLab/Shader/: ShaderBase.h  ShaderBaseBuild.h  ShaderBaseVertex.h  ShaderCompiler.h
include/ShaderLab/UI/: AboutAssets.h  OpenFontIcons.h  ShaderLabIDE.h  UIConfig.h  UISystem.h  UISystemAssets.h  UISystemDemoUtils.h
include/ShaderLab/UI/ShaderLabIDECore/: ActionWidgets.h  SemanticColors.h
metadata/: app_metadata.json
src/app/ShaderLabMain/: ShaderLabApp.cpp  main.cpp  main_sdl2.cpp
src/app/editor/: EditorApp.cpp  ShaderLabEditor.rc  main.cpp
src/app/runtime/: DemoPlayer.cpp  PlayerApp.cpp  PlayerApp_sdl2.cpp  RuntimeStartupPolicy.cpp  RuntimeStartupPolicy_posix.cpp  RuntimeWindowPolicy.cpp  RuntimeWindowPolicy_sdl2.cpp  main_micro_player.cpp  main_player.cpp  main_screensaver.cpp  main_tiny4k.cpp
src/app/tiny/: CMakeLists.txt  CrinklerX86Compat.cpp  TinyDemoPlayer.cpp  TinyPlayerApp.cpp  main_tiny_player.cpp
src/app/tools/: build_cli.cpp
src/audio/: AudioSystem.cpp  BeatClock.cpp
src/core/: BuildPipeline.cpp  DxcCompilationService.cpp  PackageManager.cpp  PlaybackService.cpp  RuntimeExporter.cpp  Serializer.cpp
src/graphics/: CommandQueue.cpp  Device.cpp  Dx12ResourceService.cpp  EffectChainProcessor.cpp  PreviewRenderer.cpp  Swapchain.cpp
src/graphics/vulkan/: VulkanCommandQueue.cpp  VulkanDevice.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp
src/shader/: ShaderCompiler.cpp  ShaderCompiler_posix.cpp
src/ui/: AboutAssets.cpp  ShaderLabIDE.DemoMode.cpp  ShaderLabIDE.Editor.cpp  ShaderLabIDE.Init.cpp  ShaderLabIDE.PostFXMode.cpp  ShaderLabIDE.SceneMode.cpp  ShaderLabIDE.cpp  UISystem.About.cpp  UISystem.Demo.cpp  UISystem.Editor.cpp  UISystem.Project.cpp  UISystem.Render.cpp  UISystem.cpp  UISystemAssets.cpp
src/ui/Features/About/: AboutWindow.cpp
src/ui/Features/BuildSettings/: BuildSettingsWindow.cpp  ShaderLabIDE.BuildSettingsPersistence.cpp
src/ui/Features/CodeEditor/: ShaderLabIDE.CodeEditor.cpp
src/ui/Features/Diagnostics/: DiagnosticsView.cpp
src/ui/Features/MainMenuBar/: MainMenuBar.cpp
src/ui/Features/Project/: ShaderLabIDE.Project.cpp  ShaderLabIDE.ProjectState.cpp
src/ui/Features/Render/: ShaderLabIDE.Frame.cpp  ShaderLabIDE.Render.cpp  ShaderLabIDE.SceneCompile.cpp  ShaderLabIDE.TextureIO.cpp  ShaderLabIDE.TextureResources.cpp
src/ui/Features/RuntimeLog/: RuntimeLogWindow.cpp
src/ui/Features/SnippetBin/: ShaderLabIDE.Snippets.cpp  SnippetBinView.cpp
src/ui/Features/Theme/: ShaderLabIDE.Theme.cpp  ThemeEditorWindow.cpp
src/ui/Features/Transport/: TransportControlsView.cpp  TransportTimeline.cpp
src/ui/Helpers/: ShaderLabIDE.OrchestratorState.cpp  ShaderLabIDE.UiHelpers.cpp
src/ui/ShaderLabIDECore/: ActionWidgets.cpp  SemanticColors.cpp  ShaderEditorView.cpp
src/ui/ShaderLabIDEView/DemoModeView/: AudioLibraryView.cpp  DefaultTrack.cpp  DemoMetadataView.cpp  DemoPlaylistView.cpp
src/ui/ShaderLabIDEView/Layout/: BuildLayoutView.cpp
src/ui/ShaderLabIDEView/PostFXModeView/: PostEffectsWindowsView.cpp  PostFxChainWindow.cpp  PostFxLibraryWindow.cpp  PostFxSourceWindow.cpp
templates/: Standalone_CMakeLists.txt
tools/: build.ps1  build_installer.ps1  bundle_windows_sdk.ps1  check.ps1  check_docs.ps1  complexity_report.ps1  dev_env.cfg  dev_env.ps1  generate_complexity_report.py  integration_test.ps1  setup.ps1  sign_build.ps1  stage_enduser_docs.ps1  validate_crinkled_matrix.ps1  validate_crinkled_matrix_summary.ps1  validate_devkit_prebuilt_spike.ps1  validate_startup_relaunch_matrix.ps1  validate_tiny_crinkler_smoke.ps1
(+10 files in other folders)
